Fix top padding on Safari

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -80,6 +80,7 @@ a.inSpeech {
   -moz-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
+  overflow: hidden;
 }
 
 .me.hidden {
